--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@ layout: single
 author_profile: true
 ---
 
-<div class="col-md-8" style="height: 50vh;">
-                
+<div>
     <!-- Main Image -->
     <img class="img-responsive" src="/assets/images/pig.jpg" alt=""><br>
     
     <div style="margin-top:3%; text-align:justify;">                
-
+        <p>Who would hate a cute talking pig?</p>
     </div>
 </div> 
