--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@ author_profile: true
     <!-- Main Image -->
     <img class="img-responsive" src="/assets/images/pig.jpg" alt=""><br>
     
-    <div style="margin-top:3%; text-align:justify;">                
-        <p>Who would hate a cute talking pig?</p>
+    <div style="margin-top:3%; text-align:justify;">
+
+        <h2>Who would dislike a cute talking pig?</h2>
+
+        <p>
+            I am currently a MSc Information Security student at <a href="https://www.ucl.ac.uk/">University College London</a>.
+        </p>
+
     </div>
 </div> 
