--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: single
 author_profile: true
+toc: true
 ---
 
 <div>
@@ -9,7 +10,7 @@ author_profile: true
     
     <div style="margin-top:3%; text-align:justify;">
 
-        <h2>Who would dislike a cute talking pig?</h2>
+        <h2>WHO AM I?</h2>
 
         <p style="font-size:18px">
             I am currently a MSc Information Security student at <a href="https://www.ucl.ac.uk/">University College London</a>.
