--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: single
 author_profile: true
 toc: true
+related: true
 ---
 
 <div>
@@ -10,7 +11,7 @@ toc: true
     
     <div style="margin-top:3%; text-align:justify;">
 
-        <h2>WHO AM I?</h2>
+        <h1>WHO AM I?</h1>
 
         <p style="font-size:18px">
             I am currently a MSc Information Security student at <a href="https://www.ucl.ac.uk/">University College London</a>.
